# sloppy_auth

./: Cargo.toml  README.md
src/: aliyun.rs  aws.rs  chunk.rs  lib.rs  util.rs
src/aws/: auth.rs  mod.rs  s3.rs
tests/: aliyun.rs  aws.rs
