[package]
name = "sloppy_auth"
version = "2.2.5"
edition = "2018"
publish = false

[dependencies]
base64 = "^0.13"
ring = "^0.16"
chrono = "^0.4"
md5 = { version = "^0.7", optional = true }
url = "^2.2"
hex = "^0.4"
log = "^0.4"
ureq = "^2.2"
simple-error = "^0.2"

[dev-dependencies]
flexi_logger = "^0.19"

[features]
default = ["aws_auth"]
aliyun = ["md5"]
aws = ["aws_auth", "aws_client"]
aws_auth = []
aws_client = []
